--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@ float: left;
         <ul>
           <li><h2>Where is Zamboanga City located?</h2></li>
           <h4>Zamboanga City is located in the western part of Mindanao island in the Philippines. It is situated on the southern coast of the Zamboanga Peninsula.</h4>
-           <img src="zamboanga city map.jpg">
+           <img src="zamboanga map.jpg">
           <li> <h2> What’s the best time to visit Zamboanga City?</h2> </li>
             <h4>Visit during the dry season, from January to March, for the best weather. However, if you’re keen on festivals,<mark> October’s Hermosa Festival is a spectacle not to be missed.
             
